<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/subMenu"
        android:showAsAction="never"
        android:orderInCategory="1"
        >
        <menu>
             <item 
		        android:id="@+id/item_setting"
		        android:title="@string/setting"
		        android:showAsAction="never"
		        android:orderInCategory="1"
		        />
             <item 
		        android:id="@+id/item_other"
		        android:title="@string/other"
		        android:showAsAction="never"
		        android:orderInCategory="1"
		        />
        </menu>
    </item>
    <item 
        android:id="@+id/item_copy"
        android:title="@string/copy"
        android:showAsAction="never"
        android:orderInCategory="1"
        />
    <item 
        android:id="@+id/item_cut"
        android:title="@string/cut"
        android:showAsAction="never"
        android:orderInCategory="1"
        />
    <item 
        android:id="@+id/item_paste"
        android:title="@string/paste"
        android:showAsAction="never"
        android:orderInCategory="1"
        />
</menu>
