<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" 
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/_include_"
        android:textColor="@color/black"
        android:textSize="24sp" />
    <include layout="@layout/edit_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/merge_merge"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/merge_text_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/view_stub"
        android:textColor="@color/black"
        android:textSize="24sp" />
  	<Button 
	    android:id="@+id/btn_load"
	    android:text="@string/_subview_"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:background="@drawable/btn_selector"
        android:layout_gravity="center_horizontal"
	    />
	<ViewStub 
	    android:id="@+id/view_stub"
	    android:layout="@layout/simple_text_view"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
	    /> 
</LinearLayout>
