<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@color/white"
    android:gravity="center"
    android:padding="10dp"
    >
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
    	android:weightSum="12"
        >
	    <EditText 
	        android:id="@+id/edit_text"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/hint_you_name"
	    	android:layout_weight="8"
	        />
        <Button 
            android:id="@+id/btn_submit"
 	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/submit"
	    	android:layout_weight="4"
	    	android:background="@drawable/btn_selector"
	    	android:paddingTop="10dp"
	    	android:paddingBottom="10dp"
	    	android:paddingLeft="4dp"
	    	android:paddingRight="4dp"
            />        
    </LinearLayout>
    <ImageButton 
        android:src="@drawable/world"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:contentDescription="@string/ex_str"/>
</LinearLayout>
