<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="6"
     >
	<LinearLayout
	    android:id="@+id/linearLayout_f"
	    android:layout_height="0dp"
	    android:layout_width="match_parent"
	    android:orientation="vertical"
	    android:layout_weight="6"
	    android:gravity="center"
	    >
	    <!-- 此区域将被覆盖 -->
	</LinearLayout>
	<RadioGroup
	    android:id="@+id/btn_group"
	    android:layout_width="match_parent"
	    android:layout_height="80dp"
	    android:background="@color/white"
	    android:orientation="horizontal"
	    android:weightSum="3" 
	    >

		<RadioButton
		    android:id="@+id/radioButton1"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:text="@string/static_load"
			android:layout_weight="1"
			android:drawableTop="@drawable/ic_menu_brush"
			android:textColor="@color/black"
			android:gravity="center_horizontal"
			android:button="@null"
			android:paddingTop="10dp"
			android:background="@drawable/item_select"
		/>
		<RadioButton
		    android:id="@+id/radioButton2"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:text="@string/move_load"
		    android:layout_weight="1"
		    android:drawableTop="@drawable/ic_menu_save"
		    android:textColor="@color/black"
		    android:button="@null"
		    android:gravity="center_horizontal"
		    android:paddingTop="10dp"
		    android:checked="true"
		    android:background="@drawable/item_select"
		     />
		<RadioButton
		    android:id="@+id/radioButton3"
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:text="@string/ex_str" 
		    android:textColor="@color/black"
		    android:drawableTop="@drawable/ic_menu_redo"
		    android:layout_weight="1"
		    android:button="@null"
		    android:gravity="center_horizontal"
		    android:paddingTop="10dp"
		    android:background="@drawable/item_select"
		    />
	</RadioGroup>
</LinearLayout>
