<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:weightSum="6"
     >

    <Gallery
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="1"
        android:gravity="left"
        android:spacing="10dp"
        android:layout_marginTop="4dp"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" >
            <ImageSwitcher
		        android:id="@+id/image_switcher"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="45dp"
		        android:layout_marginLeft="45dp"
		        android:layout_marginTop="20dp"
		        android:layout_marginBottom="45dp"
		        android:layout_gravity="center"
		        >
		    </ImageSwitcher>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_gravity="bottom"
                android:gravity="center"
                android:weightSum="4"
                >

                <Button
                    android:id="@+id/btn_pre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_pre" 
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/btn_selector"
                    />

                <Button
                    android:id="@+id/btn_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_left" 
                     android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/btn_selector"
                    />

                <Button
                    android:id="@+id/btn_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_right" 
                     android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/btn_selector"
                    />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_next" 
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/btn_selector"
                    />
                
            </LinearLayout>
		    
    </FrameLayout>

</LinearLayout>
