<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <TextView
            android:id="@+id/txt_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ex_str"
            android:textColor="@color/gray"
            android:textSize="24sp" />
        
        
    </ScrollView>
    
    <!-- 水平滚动 -->
    <!--
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scrollbars="none"
        
        >
       <TextView 
           android:id="@+id/txt_view"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/content2"
           android:textSize="24sp"
           android:padding="10dp"
           android:textColor="@color/gray"
           android:singleLine="false"
           />
    </HorizontalScrollView>

    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="bottom"
        android:gravity="center"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up_scroll" 
            android:layout_weight="1"
            android:padding="20dp"
            android:background="@drawable/btn_selector"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:alpha="0.7"
            />
        <Button
            android:id="@+id/btn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_scroll" 
            android:layout_weight="1"
            android:padding="20dp"
            android:background="@drawable/btn_selector"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:alpha="0.7"
            />
    </LinearLayout>
</FrameLayout>