<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <TextView            
            android:id="@+id/dig_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="25sp"
            android:textColor="@color/gainsboro"
            android:text="@string/ex_str" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout1"
         >

        <TimePicker
            android:id="@+id/time_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            />

        

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:layout_below="@+id/linearLayout2" 
        >

        <DatePicker
            android:id="@+id/date_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"           
             />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_below="@+id/linearLayout3"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/btn_show_date_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/show_date_dialog" 
			android:layout_margin="4dp"           
            android:padding="20dp"
            android:background="@drawable/btn_selector"
            />
        <Button
            android:id="@+id/btn_show_time_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_time_dialog"
			android:layout_margin="4dp"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_selector"
             />
    </LinearLayout>

</RelativeLayout>